fullfill the order into the system. Wait for the backend to complete

--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     </div><!-- /.container -->
 
     <script src="app/libs/require.js" data-main="app"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   </body>
 </html>
